--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
   /* align-items: space-around; */
   border: 1px solid black;
   flex-wrap: wrap;
-  height: 500px;
-  width: 500px;
+  height: 750px;
+  width: 1500px;
 }
 
 .gridSquare {
@@ -30,4 +30,17 @@ body {
   border: 1px solid black;
   background-color: aliceblue;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.color-palette {
+  display: flex;
+  gap: 5px;
+  margin-bottom: 10px;
+}
+
+.color-option {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  border: 1px solid #000;
 }
