--- a/style.css
+++ b/style.css
@@ -5,14 +5,28 @@ body {
   margin: auto;
   padding: 50px;
   flex-direction: column;
+  background-color: rgba(240, 248, 255, 0.554);
+}
+
+.header {
+  background-color: rgba(204, 225, 225, 0.59);
+  border: 1px solid transparent;
+  border-radius: 5px;
+  padding: 5px;
+  color: rgba(9, 106, 106, 0.893);
+  font-size: 30px;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 1px rgb(114, 236, 255);
 }
 
 .gridContainer {
   display: flex;
-  border: 1px solid black;
+  border: 2px solid rgb(6, 86, 98);
+  border-radius: 5px;
   flex-wrap: wrap;
-  height: 750px;
-  width: 1500px;
+  height: 625px;
+  width: 1250px;
 }
 
 .gridSquare {
@@ -22,11 +36,11 @@ body {
 }
 
 #gridButton {
-  color: black;
+  color: rgba(200, 242, 247, 0.909);
   font-size: 20px;
   margin: 20px;
   border-radius: 5px;
-  border: 1px solid black;
-  background-color: aliceblue;
+  border: 1px solid transparent;
+  background-color: rgba(17, 91, 102, 0.681);
   font-family: Arial, Helvetica, sans-serif;
 }
